--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
     "next-auth": "5.0.0-beta.15",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-magic-motion": "^1.1.2",
